# RAGnetic

./: .env.example  .gitignore  BENCHMARK_RESULTS_MOCKUP.md  Dockerfile  INSTALL.md  LICENSE  NOTICE  README.md  TESTING_WORKFLOWS.md  UI_TESTING_GUIDE.md  alembic.ini  cli.py  doc_eval_test_set.json  docker-compose.yaml  fix_agent_display.py  implement_agent_tab.py  logging.uvicorn.debug.json  logging.uvicorn.json  manifest.in  py.typed  pyproject.toml  ragnetic.db  requirements-ai.txt  requirements-core.txt  requirements-data.txt  requirements-dev.txt  requirements-minimal.txt  requirements-training.txt  requirements-vectorstores.txt  requirements.txt  script.py  set_token.html  test.json  test_commands.md  test_docs.txt  test_enterprise_eval.json  test_enterprise_evaluation.py
agents_data/: HRBot.json
alembic/: env.py
alembic/versions/: 02a4537033ed_lambda_tool_tables.py  05bd4c248da9_new_benchmark_tables.py  05ee0500526c_add_details_column_to_logs_for_.py  0ce2d617aba4_initial_schema.py  1ad16942cea4_fixing_migration_issues.py  1f572dfb38ba_initial_schema.py  22af019ebf9b_add_llm_model_to_conversation_metrics.py  24a2d0b5ecb9_add_last_triggered_at_to_schedules.py  251eec9b6e10_add_embedding_cost_usd_to_conversation_.py  26ab2021829e_workflows_tables.py  2acf9c37ff82_add_first_name_and_last_name_to_users_.py  34be3a403358_fix_unconsumed_column.py  3683a6f33081_initial_schema.py  3c6c3d9cb622_initial_schema.py  47317616241d_final_fix_for_cross_database_.py  48b4a5bb97ff_new_citation_tables_added.py  4a434f93de52_migration_fix.py  52ac691ffe9e_create_initial_database_schema.py  55c3eceafc39_db_fix.py  5ed89207c975_add_celery_beat_sqlalchemy_tables.py  7388d15f7764_migration_for_fune_tuning_models.py  75f2636c52ea_recreate_missing_migration.py  7a3817fb116e_add_last_run_at_to_workflows_for_lock.py  7e749e47b9a1_create_agent_run_and_step_audit_tables.py  81774bd8e69e_make_session_id_nullable_in_.py  82fa27ad6469_fix_db.py  8f3bcdef7e53_fix_unconsumed_column_definition.py  9e7c6984ef14_initial_db.py  a175b1ec75c8_add_schedules_table.py  ab28a67a0679_add_fine_tune_fine_tuned_model_id_.py  b0aa58df7df9_add_meta_column_to_chat_session_table.py  b498494f18c5_switch_to_timezone_naive_timestamps_for_.py  c6dd356d9a4c_add_parent_run_id_to_workflowrun_tables.py  c968b2a95ced_initial_schema.py  cb465e9c654d_initial_schema.py  cc04fb10636c_add_dao_logic_for_users_roles_and_api_.py  cf6323164644_remove_chunk_uid_column.py  d1a590d6d0db_migration_fixes.py  d8d23bea56fd_add_agent_state_machine_with_status_and_.py  d906b26835c5_add_parent_run_id_to_agent_runs_and_.py  (+10 more)
app/: __init__.py  main.py  watcher.py
app/agents/: agent_graph.py  base_agent.py  config_manager.py  loader.py
app/api/: agents.py  analytics.py  audit.py  billing.py  citations.py  deployments.py  documents.py  evaluation.py  gpu.py  gpu_monitoring.py  invoke.py  lambda_tool.py  metrics.py  monitoring.py  projects.py  query.py  schedules.py  security.py  training.py  webhooks.py  workflows.py
app/core/: __init__.py  citation_parser.py  config.py  cost_calculator.py  embed_config.py  parsing_utils.py  rate_limit.py  security.py  serialization.py  structured_logging.py  tasks.py  user_paths.py  validation.py
app/db/: __init__.py  dao.py  models.py
app/evaluation/: benchmark.py  dataset_generator.py
app/executors/: docker_executor.py  gpu_training_executor.py
app/pipelines/: data_policy_utils.py  embed.py  metadata_utils.py
app/schemas/: __init__.py  agent.py  api_toolkit.py  billing.py  data_prep.py  deployments.py  fine_tuning.py  gpu.py  lambda_tool.py  orchestrator.py  projects.py  schedule.py  security.py  workflow.py
app/services/: agent_manager.py  agent_sync_scheduler.py  agent_sync_service.py  cost_service.py  credit_service.py  file_service.py  gpu_cost_service.py  gpu_monitoring.py  gpu_orchestrator.py  gpu_rate_limiter.py  gpu_service_factory.py  lambda_file_helper.py  mock_gpu_service.py  real_gpu_service.py  temporary_document_service.py
app/tools/: api_toolkit.py  arxiv_tool.py  email_tool.py  extraction_tool.py  http_request_tool.py  lambda_tool.py  python_script_tool.py  retriever_tool.py  search_engine_tool.py  slack_webhook_tool.py  sql_tool.py
app/training/: model_manager.py  trainer.py  trainer_tasks.py
app/workflows/: engine.py  scheduler.py  sync.py  tasks.py
control/: celery.exchange  celery.pidbox.exchange
frontend/: index.html  package.json
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css
sandbox/: Dockerfile  runner.py  training.Dockerfile
scripts/: prepare_alpaca.py
static/css/: dashboard.css  style.css
static/html/: ingestion_modal.html
static/js/: gpu.js  (+11 more)
templates/: agent_interface.html  dashboard.html  login.html
test-reports/: integration-results.xml  quick-results.xml  test-summary.txt  unit-results.xml
tests/: conftest.py  pytest.ini  run_tests.py  run_upload_tests.py  run_upload_tests_simple.py  start_test_server.py  test_agent_workflow.py  test_chat_interface.py  test_component_destruction.py  test_comprehensive_sandbox.py  test_comprehensive_summary.py  test_comprehensive_user_system.py  test_corrected_file_upload.py  test_direct_component_stress.py  test_document_upload.py  test_evaluation_metrics.py  test_file_upload_fixes.py  test_file_upload_summary.py  test_file_upload_system.py  test_file_workflow.py  test_final_verification.py  test_fixes_verification.py  test_functional_destruction.py  test_gui_dashboard.py  test_gui_end_to_end.py  test_integration_simple.py  test_lambda_tool_integration_nuclear.py  test_lambda_tool_nuclear.py  test_lambda_tool_stress_nuclear.py  test_lora_finetuning_frontend_backend_integration.py  test_lora_finetuning_nuclear_annihilation.py  test_master_gui_runner.py  test_new_agent_creation.py  test_quick_functional.py  test_reproducible_ids.py  test_sandbox_execution.py  test_simple_gui_verification.py  test_system_integration_annihilation.py  test_system_verification.py  test_training_tasks_nuclear_destruction.py  (+13 more)
training_configs/: my_finetune_job.yaml  my_test_finetune_job.yaml
workflows/: basic_test.yaml
(+58 files in other folders)
