[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "ragnetic"
version          = "0.1.0"
description      = "An open-source, plug-and-play framework for deploying on-premise AI agents powered by internal knowledge."
readme           = "README.md"
requires-python  = ">=3.9"
license          = "MIT"
authors          = [
  { name = "Mirza Ishraq", email = "contact@ragnetic.ai" },
]
dependencies     = [
  "alembic",
  "asyncpg",
  "arxiv",
  "beautifulsoup4",
  "faiss-cpu",
  "fastapi",
  'datasets',
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "GitPython",
  "gunicorn",
  "langchain",
  "langchain-community",
  "langchain-google-genai",
  "langchain-huggingface",
  "langchain-openai",
  "llama-index",
  "llama-index-embeddings-langchain",
  "langgraph",
  "mysqlclient",
  "nbformat",
  "pandas",
  "PyMuPDF",
  "psycopg2-binary",
  "python-docx",
  "python-dotenv",
  "pyyaml",
  "requests",
  "sentence-transformers",
  "sqlalchemy",
  "rank_bm25",
  "trafilatura",
  "typer[all]",
  "uvicorn[standard]",
  "watchdog",
  "chromadb",
  "qdrant-client",
  "pinecone",
  "pymongo",
  "redis",
  "langchain-mongodb",
  "langchain-pinecone",
  "langchain-qdrant",
  "pytest",
  "pytest-mock",
  "sqlalchemy",
  "tiktoken",
  'pyarrow',
  'langgraph-checkpoint-postgres'
]
scripts = { "ragnetic" = "cli:app" }

[tool.setuptools]
include-package-data = true
packages = { find = { where = ["."], include = ["app*"], exclude = ["tests*"] } }
py-modules = ["cli"]

